# 7zip-cpp

./: .gitignore  .gitmodules  7zpp.VS2013.sln  7zpp.VS2015.sln  7zpp.VS2017.sln  7zpp.sln  CMakeLists.txt  Contributing.md  LICENSE.txt  README.md  TODO.md  appveyor.yml
7zip/C/Util/7z/: 7z.sln  7z.vcxproj  7z.vcxproj.filters
7zip/C/Util/Lzma/: LzmaUtil.sln  LzmaUtil.vcxproj
7zpp/: 7zpp.VS2013.vcxproj  7zpp.VS2015.vcxproj  7zpp.VS2017.vcxproj  7zpp.h  7zpp.vcxproj  7zpp.vcxproj.filters  ArchiveExtractCallback.cpp  ArchiveExtractCallback.h  ArchiveOpenCallback.cpp  ArchiveOpenCallback.h  ArchiveUpdateCallback.cpp  ArchiveUpdateCallback.h  CompressionFormat.h  FileInfo.h  FileSys.cpp  FileSys.h  GUIDs.h  InStreamWrapper.cpp  InStreamWrapper.h  ListCallback.cpp  ListCallback.h  MemExtractCallback.cpp  MemExtractCallback.h  OutMemStream.cpp  OutMemStream.h  OutStreamWrapper.cpp  OutStreamWrapper.h  PathScanner.cpp  PathScanner.h  ProgressCallback.cpp  ProgressCallback.h  PropVariant.cpp  PropVariant.h  SevenString.cpp  SevenString.h  SevenZipArchive.cpp  SevenZipArchive.h  SevenZipCompressor.cpp  SevenZipCompressor.h  SevenZipException.cpp  (+10 more)
7zpp-TestApp/: 7zpp-TestApp.VS2013.vcxproj  7zpp-TestApp.VS2015.vcxproj  7zpp-TestApp.VS2017.vcxproj  7zpp-TestApp.cpp  7zpp-TestApp.vcxproj  7zpp-TestApp.vcxproj.filters  ReadMe.txt  stdafx.cpp
Include/7zpp/: 7zpp.h  ArchiveListCallback.h  FileInfo.h  ListCallback.h  ProgressCallback.h  SevenZipCompressor.h  SevenZipException.h  SevenZipExtractor.h  SevenZipLibrary.h  SevenZipLister.h
Lib/Win32/: 7zpp_a.lib  7zpp_ad.lib  7zpp_u.lib  7zpp_ud.lib
Lib/x64/: 7zpp_a.lib  7zpp_ad.idb  7zpp_ad.lib  7zpp_u.lib  7zpp_ud.lib
dll/: License.txt
scripts/: PostBuildCommands.bat
